--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,16 @@
   box-sizing: border-box  ;
 }a{
   text-decoration: none;
-  color: red;
+  color: white;
 }
 .App {
   text-align: center;
 }
 
-
+.no_data{
+  margin-top: 5rem;
+  color: rgb(206, 206, 206);
+}
+.no_data>div>.MuiSvgIcon-root{
+  font-size: 10rem;  
+}
