--- a/src/components/All-items/AllItems.css
+++ b/src/components/All-items/AllItems.css
@@ -82,9 +82,24 @@ label{
 .action>.MuiSvgIcon-root:hover{
     position: relative;
     font-size: x-large;
+    color: red;
 }
 
 .clearFilter{
     position: absolute;
     /* right:10rem; */
+}
+.err{
+    position: absolute;
+    color: red;
+    top:13px;
+    font-weight: 500;
+    right: 0;
+    left: 0;
+    transition: all .2s;
+}
+.buttons{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
